# projector

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  USAGE.md
docs/superpowers/specs/: 2026-05-14-health-dashboard-design.md  2026-05-22-feature-addition-design.md  2026-05-30-project-intelligence-suite-design.md
log/: 0.0.1.md
proj/: Log.md
src/: analyzer.rs  color.rs  command.rs  config.rs  export_template.rs  global.rs  lib.rs  main.rs  snapshot.rs  tags.rs
src/subcmd/: activity.rs  completion.rs  config.rs  deps.rs  export.rs  inspect.rs  list.rs  mod.rs  orphans.rs  report.rs  scan.rs  search.rs  snapshot.rs  stats.rs  tag.rs  trend.rs
